@@ -1,9 +1,9 @@
-FROM openjdk:8-jre-slim
+FROM openjdk:21
 
 EXPOSE 8080
 
 RUN mkdir /app
 
-COPY build/libs/*.jar /app/spring-boot-application.jar
+COPY build/libs/*.jar /app/application.jar
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+ENTRYPOINT ["java", "-jar","/app/application.jar"]
